Fixed overflow & alignment issues

--- a/client/preview/preview.scss
+++ b/client/preview/preview.scss
@@ -27,16 +27,18 @@
     background-color: #eee;
     margin: 15px 0 15px auto;
     box-shadow: 5px 5px 5px rgba(0,0,0,0.25);
-    white-space: nowrap;
-    .text {
-        float: left;
-        padding-left: 1ex;
+    .text, .number {
+        padding: 0 1ex;
         font-weight:bold;
+        flex: none;
     }
-    .number {
-        float: right;
-        padding-right: 1ex;
-        font-weight: bold;
+    .text-wrapper {
+        white-space: nowrap;
+        direction: rtl;
+        width: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
     }
 }
 
